--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,8 +2,25 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  border: 3px solid #63b3ed;
-  box-shadow: 0 0 20px rgba(99, 179, 237, 0.5);
+  border: 3px solid #4661cd;
+  background-color: #eeeeee;
+}
+
+#banner .title {
+  text-transform: none;
+  margin-bottom: 15px;
+}
+
+#banner p {
+  text-transform: none;
+}
+
+h2.major {
+  text-transform: none;
+}
+
+a.special:not(.button) {
+  text-transform: none;
 }
 
 .wrapper.spotlight .image {
