Update branding and refine styles in index and CSS
Adjusted logo dimensions and removed border in CSS for cleaner design. Updated app names and corrected titles in the HTML for consistency. Minor tweaks ensure visual improvements and alignment with branding guidelines.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,8 @@
 .logo .logo-img {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
-  border: 3px solid #4661cd;
+  /*border: 3px solid #4661cd;*/
   background-color: #eeeeee;
 }
 
