--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,9 +1,11 @@
 .logo .logo-img {
-  width: 80px;
-  height: 80px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
+  position: relative;
+  left: -20px;
   /*border: 3px solid #4661cd;*/
-  background-color: #eeeeee;
+  /*background-color: #eeeeee;*/
 }
 
 #banner .title {
